Added wavded/vim-styles as submodule to bundle/stylus

--- a/.gitmodules
+++ b/.gitmodules
@@ -130,3 +130,7 @@
 	path = bundle/jade
 	url = git://github.com/digitaltoad/vim-jade.git
         ignore = dirty
+[submodule "bundle/stylus"]
+	path = bundle/stylus
+	url = git://github.com/wavded/vim-stylus.git
+        ignore = dirty
