--- a/.gitmodules
+++ b/.gitmodules
@@ -130,13 +130,15 @@
 	path = bundle/stylus
 	url = git://github.com/wavded/vim-stylus.git
         ignore = dirty
-[submodule "bundle/Command-T"]
-	path = bundle/Command-T
-	url = git://github.com/wincent/Command-T.git
-        ignore = dirty
 [submodule "bundle/slim"]
 	path = bundle/slim
 	url = git://github.com/bbommarito/vim-slim.git
+        ignore = dirty
 [submodule "bundle/powerline"]
 	path = bundle/powerline
 	url = git://github.com/Lokaltog/vim-powerline.git
+        ignore = dirty
+[submodule "bundle/ctrlp"]
+	path = bundle/ctrlp
+	url = git://github.com/kien/ctrlp.vim.git
+        ignore = dirty
