--- a/.gitmodules
+++ b/.gitmodules
@@ -50,8 +50,8 @@
 	path = bundle/unimpaired
 	url = git://github.com/tpope/vim-unimpaired.git
         ignore = dirty
-[submodule "bundle/scss-syntax"]
-	path = bundle/scss-syntax
+[submodule "bundle/scss"]
+	path = bundle/scss
 	url = git://github.com/cakebaker/scss-syntax.vim.git
         ignore = dirty
 [submodule "bundle/ack"]
@@ -90,8 +90,8 @@
 	path = bundle/jquery
 	url = git://github.com/itspriddle/vim-jquery.git
         ignore = dirty
-[submodule "bundle/html5.vim"]
-	path = bundle/html5.vim
+[submodule "bundle/html5"]
+	path = bundle/html5
 	url = git://github.com/othree/html5.vim.git
         ignore = dirty
 [submodule "bundle/gundo"]
