--- a/.gitmodules
+++ b/.gitmodules
@@ -138,3 +138,6 @@
 	path = bundle/tcomment
 	url = git://github.com/tomtom/tcomment_vim.git
         ignore = dirty
+[submodule "bundle/autoclose"]
+	path = bundle/autoclose
+	url = git://github.com/vim-scripts/AutoClose.git
