Moved grep.vim to bundle/

--- a/.gitmodules
+++ b/.gitmodules
@@ -141,3 +141,6 @@
 [submodule "bundle/autoclose"]
 	path = bundle/autoclose
 	url = git://github.com/vim-scripts/AutoClose.git
+[submodule "bundle/grep"]
+	path = bundle/grep
+	url = git://github.com/vim-scripts/grep.vim.git
