--- a/.gitmodules
+++ b/.gitmodules
@@ -130,3 +130,6 @@
 	path = bundle/lusty-juggler
 	url = git://github.com/vim-scripts/LustyJuggler.git
         ignore = dirty
+[submodule "bundle/neocomplcache"]
+	path = bundle/neocomplcache
+	url = git://github.com/Shougo/neocomplcache.git
