--- a/.gitmodules
+++ b/.gitmodules
@@ -130,3 +130,7 @@
 	path = bundle/neocomplcache
 	url = git://github.com/Shougo/neocomplcache.git
         ignore = dirty
+[submodule "bundle/smartinput"]
+	path = bundle/smartinput
+	url = git://github.com/kana/vim-smartinput.git
+        ignore = dirty
