--- a/.gitmodules
+++ b/.gitmodules
@@ -105,21 +105,28 @@
 [submodule "snipmate/snipmate"]
 	path = snipmate/snipmate
 	url = git://github.com/garbas/vim-snipmate.git
+        ignore = dirty
 [submodule "snipmate/tlib_vim"]
 	path = snipmate/tlib_vim
 	url = git://github.com/tomtom/tlib_vim.git
+        ignore = dirty
 [submodule "snipmate/addon-mw-utils"]
 	path = snipmate/addon-mw-utils
 	url = git://github.com/MarcWeber/vim-addon-mw-utils
+        ignore = dirty
 [submodule "snipmate/snipmate-snippets"]
 	path = snipmate/snipmate-snippets
 	url = git://github.com/honza/snipmate-snippets
+        ignore = dirty
 [submodule "snipmate/snipmate-mocha"]
 	path = snipmate/snipmate-mocha
 	url = git://github.com/mmozuras/snipmate-mocha.git
+        ignore = dirty
 [submodule "snipmate/snipmate-shouldjs"]
 	path = snipmate/snipmate-shouldjs
 	url = git://github.com/mmozuras/snipmate-shouldjs.git
+        ignore = dirty
 [submodule "bundle/molokai"]
 	path = bundle/molokai
 	url = git://github.com/tomasr/molokai.git
+        ignore = dirty
