Readd yankring from vim-scripts/yankring

--- a/.gitmodules
+++ b/.gitmodules
@@ -126,3 +126,7 @@
 	path = bundle/molokai
 	url = git://github.com/tomasr/molokai.git
         ignore = dirty
+[submodule "bundle/yankring"]
+	path = bundle/yankring
+	url = git://github.com/vim-scripts/YankRing.vim.git
+        ignore = dirty
