--- a/.gitmodules
+++ b/.gitmodules
@@ -122,3 +122,6 @@
 	path = bundle/yankring
 	url = git://github.com/vim-scripts/YankRing.vim.git
         ignore = dirty
+[submodule "bundle/golang"]
+	path = bundle/golang
+	url = git://github.com/uggedal/go-vim.git
