--- a/.gitmodules
+++ b/.gitmodules
@@ -125,3 +125,6 @@
 [submodule "bundle/golang"]
 	path = bundle/golang
 	url = git://github.com/uggedal/go-vim.git
+[submodule "bundle/erlang"]
+	path = bundle/erlang
+	url = https://github.com/jimenezrick/vimerl
