Fix bundle/bundler path in .gitmodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -130,3 +130,7 @@
 	path = bundle/rails
 	url = git://github.com/tpope/vim-rails.git
         ignore = dirty
+[submodule "bundle/bundler"]
+        path = bundle/bundler
+        url = git://github.com/tpope/vim-bundler.git
+        ignore = dirty
