--- a/.gitmodules
+++ b/.gitmodules
@@ -101,6 +101,16 @@
 [submodule "bundle/ack"]
 	path = bundle/ack
 	url = git://github.com/mileszs/ack.vim.git
+        ignore = dirty
 [submodule "bundle/solarized"]
 	path = bundle/solarized
 	url = git://github.com/altercation/vim-colors-solarized.git
+        ignore = dirty
+[submodule "bundle/github-comment"]
+	path = bundle/github-comment
+	url = git://github.com/mmozuras/vim-github-comment.git
+        ignore = dirty
+[submodule "bundle/webapi"]
+	path = bundle/webapi
+	url = git://github.com/mattn/webapi-vim.git
+        ignore = dirty
