--- a/.gitmodules
+++ b/.gitmodules
@@ -105,3 +105,4 @@
 [submodule "bundle/YouCompleteMe"]
 	path = bundle/YouCompleteMe
 	url = git@github.com:Valloric/YouCompleteMe.git
+        ignore = dirty
