--- a/.gitmodules
+++ b/.gitmodules
@@ -7,7 +7,7 @@
 	url = git://github.com/tpope/vim-fugitive.git
         ignore = dirty
 [submodule "bundle/markdown"]
-	path = bundle/markdown
+	path = languages/markdown
 	url = git://github.com/tpope/vim-markdown.git
         ignore = dirty
 [submodule "bundle/endwise"]
@@ -19,7 +19,7 @@
 	url = git://github.com/scrooloose/syntastic.git
         ignore = dirty
 [submodule "bundle/ruby"]
-	path = bundle/ruby
+	path = languages/ruby
 	url = git://github.com/vim-ruby/vim-ruby.git
         ignore = dirty
 [submodule "bundle/unimpairedunimpaired"]
@@ -27,11 +27,11 @@
 	url = git://github.com/tpope/vim-unimpaired.git
         ignore = dirty
 [submodule "bundle/scss"]
-	path = bundle/scss
+	path = languages/scss
 	url = git://github.com/cakebaker/scss-syntax.vim.git
         ignore = dirty
 [submodule "bundle/html5"]
-	path = bundle/html5
+	path = languages/html5
 	url = git://github.com/othree/html5.vim.git
         ignore = dirty
 [submodule "bundle/gundo"]
@@ -55,7 +55,7 @@
 	url = git://github.com/kana/vim-smartinput.git
         ignore = dirty
 [submodule "bundle/erlang"]
-	path = bundle/erlang
+	path = languages/erlang
 	url = git://github.com/jimenezrick/vimerl.git
         ignore = dirty
 [submodule "bundle/rails"]
@@ -91,7 +91,7 @@
 	url = git@github.com:mmozuras/vim-cursor.git
         ignore = dirty
 [submodule "bundle/elixir"]
-	path = bundle/elixir
+	path = languages/elixir
 	url = git@github.com:elixir-lang/vim-elixir.git
         ignore = dirty
 [submodule "bundle/ctrlp"]
