--- a/.gitmodules
+++ b/.gitmodules
@@ -102,3 +102,7 @@
         path = bundle/vimroom
         url = git@github.com:mikewest/vimroom.git
         ignore = dirty
+[submodule "languages/go"]
+        path = languages/go
+        url = git@github.com:jnwhiteh/vim-golang.git
+        ignore = dirty
