Change ctrlp repo url from kien/ctrlp to active ctrlpvim fork

--- a/.gitmodules
+++ b/.gitmodules
@@ -96,7 +96,7 @@
         ignore = dirty
 [submodule "bundle/ctrlp"]
         path = bundle/ctrlp
-        url = git://github.com/kien/ctrlp.vim.git
+        url = git@github.com:ctrlpvim/ctrlp.vim.git
         ignore = dirty
 [submodule "languages/scala"]
         path = languages/scala
